[package]
name = "outpackserver"
version = "0.1.0"
edition = "2021"
include = ["schema/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "outpackserver"
path = "src/main.rs"

[lib]
name = "outpackserver"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
walkdir = "2.3.2"
cached = "0.40.0"
getopts = "0.2"
