[package]
name = "outpack"
version = "0.3.0"
edition = "2021"
rust-version = "1.70"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
cached = "0.40.0"
walkdir = "2.3.2"
md5 = "0.7.0"
sha2 = "0.10.6"
sha1 = "0.10.5"
lazy_static = "1.4.0"
pest = "2.7"
pest_derive = "2.7"
itertools = "0.10.5"
tempfile = "3.6.0"
clap = { version = "4.4.8", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0.50"
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py38"], optional = true }
prometheus = { version = "0.13.3", features = ["process"] }
tokio = { version = "1.35.1", features = ["fs", "rt-multi-thread"] }
axum = "0.7.4"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tower-http = { version = "0.5.1", features = ["trace", "catch-panic", "request-id", "util"] }
tokio-util = { version = "0.7.10", features = ["io"] }
futures = "0.3.30"
tower = "0.4.13"
mime = "0.3.17"
git2 = { version = "0.18.2" }

[dev-dependencies]
assert_cmd = "2.0.6"
predicates = "2.1.2"
jsonschema = "0.16.1"
url = "2.3.1"
tempdir = "0.3.7"
tar = "0.4.38"
chrono = "0.4.33"
rand = "0.8.5"
tracing-capture = "0.1.0"
test-utils = { path = "test-utils" }

[features]
python = ["dep:pyo3"]
openssl-vendored = ["git2/vendored-openssl"]
